--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,7 @@ body {
   background-image: url(/images/bg-4.jpg);
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
+
 
 }
